--- a/variables.less
+++ b/variables.less
@@ -9,7 +9,9 @@
 
 .buttons {
     background-color: @yellow;
+    border-color: @yellow;
     border-radius: 8px;
+    padding: 12px;
 }
 
 .main-font {
