Add mobile, tablet, and desktop breakpoints

--- a/styles.less
+++ b/styles.less
@@ -9,14 +9,15 @@ body, html {
 ul {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
-    height: 15vh;
+    height: 25vh;
     background-color: @yellow;
     margin: 0;
     li {
         .main-font();
         list-style-type: none;
-        padding-right: 5%;
+        padding-right: 7%;
     }
     .order-now {
         color: @red;
@@ -27,13 +28,15 @@ ul {
 .banner {
     background-image: url("./img/banner-bg.jpg"), linear-gradient(rgba(59, 56, 56, .33), rgba(59, 56, 56, .33));
     background-blend-mode: overlay;
+    background-position: center;
     height: 65vh;
     img, button{
         display: block;
         margin: auto;
     }
     .logo {
-        padding: 5%;
+        padding: 15% 0 10% 0;
+        max-width: 65%;
     }
 }
 
@@ -57,14 +60,18 @@ p {
 }
 
 .article-content {
-    max-width: 58vw;
+    max-width: 75vw;
 }
 
 article {
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
    justify-content: space-around;
-   padding: 5%;
+   padding: 5% 5% 5% 10%;
+   img {
+       max-width: 70vw;
+       padding: 10% 0;
+   }
 }
 
 .gray-article {
@@ -85,9 +92,82 @@ button {
 footer {
     background-color: @black;
     img {
-        max-width: 25%;
+        max-width: 45%;
         display: block;
-        padding: 2%;
+        padding: 5%;
         margin: auto;
+    }
+}
+
+@media (min-width: 500px) {
+    .banner {
+        height: 80vh;
+        .logo {
+            padding: 10% 0 5% 0;
+            max-width: 65%;
+        }
+    }
+
+    article {
+        img {
+            max-width: 40vw;
+            padding: 5% 0;
+        }
+    }
+}
+
+@media (min-width: 800px) {
+    .banner {
+        width: 100vw;
+        .logo {
+            max-width: 50%;
+        }
+    }
+
+    .article-content {
+        max-width: 58vw;
+    }
+
+    article {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 5%;
+    }
+
+    footer {
+        img {
+            max-width: 35%;
+            padding: 4%;
+        }   
+    }
+    
+}
+
+@media (min-width: 1200px) {
+    ul {
+        height: 15vh;
+    }
+
+    .banner {
+        // height: 65vh;
+        max-width: 100vw;
+        .logo {
+            padding: 5%;
+            max-width: 40%;
+        }
+    }
+
+    .gray-article {
+        img {
+            padding: 0%;
+        }
+    }
+
+    footer {
+        img {
+            max-width: 25%;
+            padding: 2%;
+        }
     }
 }
